--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.2.1",
     "@types/googlemaps": "^3.37.0",
     "@types/markerclustererplus": "^2.1.33",
     "chartist": "^0.11.3",
